--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -1,10 +1,10 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=/Users/buka/Soft/flutter
-FLUTTER_APPLICATION_PATH=/Users/buka/Project/Flutter/lens_spinner
+FLUTTER_ROOT=C:\Soft\flutter
+FLUTTER_APPLICATION_PATH=C:\Project\GITHUB\lens-spinner
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_BUILD_DIR=build
-FLUTTER_BUILD_NAME=0.0.1
-FLUTTER_BUILD_NUMBER=0.0.1
+FLUTTER_BUILD_NAME=0.0.2
+FLUTTER_BUILD_NUMBER=0.0.2
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
